Bug 330049 - muon-discover & muon: On startup, search field has not the keyboard focus
Summary: muon-discover & muon: On startup, search field has not the keyboard focus
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: discover (other bugs)
Version First Reported In: 2.1.70
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-16 22:53 UTC by Achim Bohnet
Modified: 2014-10-08 10:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Achim Bohnet 2014-01-16 22:53:45 UTC
When muon-discover or muon are started and show their window, the 'search' field does not have the keyboard focus,  despite the fact that no other input fields beside 'search'.



Reproducible: Always

Steps to Reproduce:
1. start muon or muon-discover
2. start typing
3.
Actual Results:  
nothing happens

Expected Results:  
keyboard input should be added to the 'search' field without a first click into 'search' field.
Comment 1 Aleix Pol 2014-01-16 23:25:08 UTC
You can move the focus there using Ctrl+F.

I'm unsure we want to have the focus there by default. Keyboard focus needs reconsideration on the whole software anyway though, so I'm not closing for the moment.
Comment 2 Harald Sitter 2014-01-17 08:40:13 UTC
Just my 2 cents: it always annoys the hell out of me if something's primary initial use case is searching but doesn't focus the search field (think plasma's add widget dialog).

To that extent I believe the Muons should in fact focus the search field. It is the only input and focusing it by default does not actually break any of the alternative use cases (such as discovery by browsing). So to me it sounds a lot like 100% gain & 0% risk ;)
Comment 3 Aleix Pol 2014-10-08 10:09:52 UTC
Git commit bcdae6ac1a38720dd463806b9120073c41c72a5f by Aleix Pol.
Committed on 08/10/2014 at 10:08.
Pushed by apol into branch 'master'.

Focus the search field by default

M  +6    -0    discover/MuonDiscoverMainWindow.cpp
M  +2    -0    discover/MuonDiscoverMainWindow.h

http://commits.kde.org/muon/bcdae6ac1a38720dd463806b9120073c41c72a5f