Focus the search field by default

BUG: 330049